--- a/index.html
+++ b/index.html
@@ -153,6 +153,21 @@
 
                 <div class="twelve columns">
 
+                    <h3>Москва, COMS</h3>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2021 - по настоящее время</em>
+                    </p>
+                    <p>
+                        Поддержка системы мониторинга сетевого оборудования.
+                    </p>
+
+                </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+                <div class="twelve columns">
+
                     <h3>США, NameSilo</h3>
                     <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2020 - 12.2020</em>
                     </p>
@@ -387,6 +402,23 @@
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+                <div class="columns portfolio-item">
+                    <div class="item-wrap">
+
+                        <a href="#modal-20" title="">
+                            <img alt="" src="images/portfolio/c-view/1.png">
+                            <div class="overlay">
+                                <div class="portfolio-item-meta">
+                                    <h5>COMS</h5>
+                                    <p>PHP, MySQL, Redis, RabbitMQ, Symfony, Docker</p>
+                                </div>
+                            </div>
+                            <div class="link-icon"><i class="icon-plus"></i></div>
+                        </a>
+
+                    </div>
+                </div>  <!-- item end -->
+
                 <div class="columns portfolio-item">
                     <div class="item-wrap">
 
@@ -1079,6 +1111,25 @@
             </div>
 
         </div><!-- modal-19 End -->
+
+        <div id="modal-20" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/c-view/1.png" alt=""/>
+
+            <div class="description-box">
+                <h4>COMS</h4>
+                <p>
+                    Cистема мониторинга сетевого оборудования.
+                </p>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, RabbitMQ, Symfony, Docker</span>
+            </div>
+
+            <div class="link-box">
+                <a href="portfolio-pages/c-view.html">Подробнее</a>
+                <a class="popup-modal-dismiss">Закрыть</a>
+            </div>
+
+        </div><!-- modal-20 End -->
 
     </div> <!-- row End -->
 
