--- a/portfolio-pages/c-view.html
+++ b/portfolio-pages/c-view.html
@@ -28,23 +28,21 @@
     <section id="portfolio">
         <div class="row skill">
             <div style="text-align: center">
-                <h2>Online Library</h2>
+                <h2>COMS</h2>
             </div>
             <p>
-                <a target="_blank" href="https://github.com/Researcher86/php-online-library">Онлайн библиотека</a> предназначена для поиска и просмотра книг по различным жанрам.
-                Система разрабатывается в качестве Open Source решения для каталогизации, упорядочивания, поиска книг.
-                Технологический стек: PHP, Laravel, Node, Vue, Bootstrap, PostgreSQL, Redis, ElasticSearch, MongoDB, Docker.
+                <a target="_blank" href="https://www.co-ms.ru/">COMS</a> - Cистема мониторинга сетевого оборудования..
+                Предназначена для поиска, устранения и уведомления о сбоях сетевого оборудования.
+                Технологический стек: PHP, MySQL, Redis, RabbitMQ, Symfony, Docker.
             </p>
-            <h2>Главна</h2>
             <div style="text-align: center">
-                <img src="../images/portfolio/online-library/1.png">
+                <img src="../images/portfolio/c-view/1.png">
             </div>
             <br>
-            <h2>Страница результатов поиска</h2>
             <div style="text-align: center">
-                <img src="../images/portfolio/online-library/2.png">
+                <img src="../images/portfolio/c-view/2.png">
             </div>
-           </div>
+        </div>
     </section>
 
     <footer>
