--- a/portfolio-pages/namesilo.html
+++ b/portfolio-pages/namesilo.html
@@ -32,7 +32,7 @@
             </div>
             <p>
                 <a target="_blank" href="https://www.namesilo.com/">NameSilo</a> - Система регистрации доменных имен.
-                Предназначена для поиска и регистрации свободных и доступных доменных имен..
+                Предназначена для поиска и регистрации свободных и доступных доменных имен.
                 Технологический стек: PHP, MySQL, Redis, Yii, Symfony, Docker.
             </p>
             <h2>Главна</h2>
@@ -55,7 +55,7 @@
                 </ul>
 
                 <ul class="copyright">
-                <li>&copy; Copyright 2018</li>
+                <li>&copy; Copyright 2021</li>
                 </ul>
             </div>
 
