--- a/index.html
+++ b/index.html
@@ -121,12 +121,6 @@
 
                 </div>
 
-                <div class="columns download">
-                    <p>
-                        <a href="Резюме - Альпенов Т. М..docx" class="button"><i class="fa fa-download"></i>Скачать резюме</a>
-                    </p>
-                </div>
-
             </div> <!-- end row -->
 
         </div> <!-- end .main-col -->
@@ -154,7 +148,7 @@
                 <div class="twelve columns">
 
                     <h3>Москва, COMS</h3>
-                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2021 - по настоящее время</em>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2021 - 04.2021</em>
                     </p>
                     <p>
                         Поддержка системы мониторинга сетевого оборудования.
