--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
 
                 <div class="twelve columns">
 
+                    <h3>Одесса, Innovation Group</h3>
+                    <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">06.2021 - по настоящее время</em>
+                    </p>
+                    <p>
+                        Поддержка площадки для онлайн-игр.
+                    </p>
+
+                </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+                <div class="twelve columns">
+
                     <h3>Москва, COMS</h3>
                     <p class="info">Ведущий PHP-разработчик <span>&bull;</span> <em class="date">01.2021 - 04.2021</em>
                     </p>
