Add booi project to portfolio

--- a/index.html
+++ b/index.html
@@ -414,6 +414,23 @@
                 <div class="columns portfolio-item">
                     <div class="item-wrap">
 
+                        <a href="#modal-21" title="">
+                            <img alt="" src="images/portfolio/booi/1.png">
+                            <div class="overlay">
+                                <div class="portfolio-item-meta">
+                                    <h5>Innovation Group</h5>
+                                    <p>PHP, MySQL, Redis, Symfony, Docker</p>
+                                </div>
+                            </div>
+                            <div class="link-icon"><i class="icon-plus"></i></div>
+                        </a>
+
+                    </div>
+                </div>  <!-- item end -->
+
+                <div class="columns portfolio-item">
+                    <div class="item-wrap">
+
                         <a href="#modal-20" title="">
                             <img alt="" src="images/portfolio/c-view/1.png">
                             <div class="overlay">
@@ -1139,6 +1156,25 @@
             </div>
 
         </div><!-- modal-20 End -->
+
+        <div id="modal-21" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/booi/1.png" alt=""/>
+
+            <div class="description-box">
+                <h4>Innovation Group</h4>
+                <p>
+                    Онлайн площадка для игр.
+                </p>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, Symfony, Docker</span>
+            </div>
+
+            <div class="link-box">
+                <a href="portfolio-pages/booi.html">Подробнее</a>
+                <a class="popup-modal-dismiss">Закрыть</a>
+            </div>
+
+        </div><!-- modal-21 End -->
 
     </div> <!-- row End -->
 
