--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>PHP 7, Yii, Symfony, Laravel, Composer</li>
-                <li>JavaScript, Twitter Bootstrap, JQuery</li>
-                <li>PostgreSQL, MySQL, Redis, ElasticSearch</li>
+                <li>PHP 7+, Symfony, Swoole/Hyperf</li>
+                <li>JavaScript</li>
+                <li>MySQL, Redis, ElasticSearch</li>
                 <li>RabbitMQ</li>
                 <li>Linux, Docker, Git</li>
             </ul>
