--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>PHP 7+, Symfony, Swoole/Hyperf</li>
+                <li>PHP 7+, Symfony Framework, Spiral Framework</li>
                 <li>JavaScript</li>
                 <li>MySQL, Redis, ElasticSearch</li>
                 <li>RabbitMQ</li>
@@ -346,25 +346,8 @@
 
             <div class="row item">
                 <div class="twelve columns">
-                    <h3>ИНТУИТ</h3>
-                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100825887">
-                        <img src="images/portfolio/certificates/INTUIT-1.jpg" alt="Введение в СУБД MySQL">
-                    </a>
-                </div>
-            </div> <!-- item end -->
-
-            <div class="row item">
-                <div class="twelve columns">
-                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100825881">
-                        <img src="images/portfolio/certificates/INTUIT-2.jpg" alt="Разработка клиентских приложений Web-сайтов">
-                    </a>
-                </div>
-            </div> <!-- item end -->
-
-            <div class="row item">
-                <div class="twelve columns">
-                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781849">
-                        <img src="images/portfolio/certificates/INTUIT-3.jpg" alt="Введение в HTML и CSS">
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781854">
+                        <img src="images/portfolio/certificates/INTUIT-5.jpg" alt="Язык программирования PHP">
                     </a>
                 </div>
             </div> <!-- item end -->
@@ -379,16 +362,9 @@
 
             <div class="row item">
                 <div class="twelve columns">
-                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781854">
-                        <img src="images/portfolio/certificates/INTUIT-5.jpg" alt="Язык программирования PHP">
-                    </a>
-                </div>
-            </div> <!-- item end -->
-
-            <div class="row item">
-                <div class="twelve columns">
-                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100781846">
-                        <img src="images/portfolio/certificates/INTUIT-6.jpg" alt="Введение в программирование на Delphi">
+                    <h3>ИНТУИТ</h3>
+                    <a target="_blank" href="https://intuit.ru/verifydiplomas/100825887">
+                        <img src="images/portfolio/certificates/INTUIT-1.jpg" alt="Введение в СУБД MySQL">
                     </a>
                 </div>
             </div> <!-- item end -->
