--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>Innovation Group</h5>
-                                    <p>PHP, MySQL, Redis, Symfony, Docker</p>
+                                    <p>PHP, Symfony, MySQL, Redis, RabbitMQ, Docker</p>
                                 </div>
                             </div>
                             <div class="link-icon"><i class="icon-plus"></i></div>
@@ -411,7 +411,7 @@
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>COMS</h5>
-                                    <p>PHP, MySQL, Redis, RabbitMQ, Symfony, Docker</p>
+                                    <p>PHP, Symfony, MySQL, Redis, RabbitMQ, Docker</p>
                                 </div>
                             </div>
                             <div class="link-icon"><i class="icon-plus"></i></div>
@@ -428,7 +428,7 @@
                             <div class="overlay">
                                 <div class="portfolio-item-meta">
                                     <h5>NameSilo</h5>
-                                    <p>PHP, MySQL, Redis, Yii, Symfony, Docker</p>
+                                    <p>PHP, Yii, Symfony, MySQL, Redis, Docker</p>
                                 </div>
                             </div>
                             <div class="link-icon"><i class="icon-plus"></i></div>
