--- a/portfolio-pages/booi.html
+++ b/portfolio-pages/booi.html
@@ -32,7 +32,7 @@
             </div>
             <p>
                 <a target="_blank" href="https://booi.com/">Innovation Group</a> - Онлайн площадка для игр.
-                Технологический стек: PHP, MySQL, Redis, Symfony, Docker.
+                Технологический стек: PHP, Symfony, MySQL, Redis, RabbitMQ, Docker.
             </p>
             <div style="text-align: center">
                 <img src="../images/portfolio/booi/2.png">
