--- a/portfolio-pages/c-view.html
+++ b/portfolio-pages/c-view.html
@@ -33,7 +33,7 @@
             <p>
                 <a target="_blank" href="https://www.co-ms.ru/">COMS</a> - Cистема мониторинга сетевого оборудования..
                 Предназначена для поиска, устранения и уведомления о сбоях сетевого оборудования.
-                Технологический стек: PHP, MySQL, Redis, RabbitMQ, Symfony, Docker.
+                Технологический стек: PHP, Symfony, MySQL, Redis, RabbitMQ, Docker.
             </p>
             <div style="text-align: center">
                 <img src="../images/portfolio/c-view/1.png">
