--- a/portfolio-pages/namesilo.html
+++ b/portfolio-pages/namesilo.html
@@ -33,7 +33,7 @@
             <p>
                 <a target="_blank" href="https://www.namesilo.com/">NameSilo</a> - Система регистрации доменных имен.
                 Предназначена для поиска и регистрации свободных и доступных доменных имен.
-                Технологический стек: PHP, MySQL, Redis, Yii, Symfony, Docker.
+                Технологический стек: PHP, Yii, Symfony, MySQL, Redis, Docker.
             </p>
             <h2>Главна</h2>
             <div style="text-align: center">
