--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                 <p>
                     Система регистрации доменных имен.
                 </p>
-                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, Yii, Symfony, Docker</span>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, Yii, Symfony, MySQL, Redis, Docker</span>
             </div>
 
             <div class="link-box">
@@ -906,7 +906,7 @@
                 <p>
                     Cистема мониторинга сетевого оборудования.
                 </p>
-                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, RabbitMQ, Symfony, Docker</span>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, Symfony, MySQL, Redis, RabbitMQ, Docker</span>
             </div>
 
             <div class="link-box">
@@ -925,7 +925,7 @@
                 <p>
                     Онлайн площадка для игр.
                 </p>
-                <span class="categories"><i class="fa fa-tag"></i>PHP, MySQL, Redis, Symfony, Docker</span>
+                <span class="categories"><i class="fa fa-tag"></i>PHP, Symfony, MySQL, Redis, RabbitMQ, Docker</span>
             </div>
 
             <div class="link-box">
