--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
                     <li>Разработал бесплатную программу "FASM Editor" для себя и сообщества ассемблер программистов. Программу можно бесплатно скачать с сайта
                         <a target="_blank" href="https://github.com/Researcher86/fasm-editor">Ссылка</a></li>
                     <li>Разработал информационную систему "Антиплагиат", тем самым университет КИнЭУ сэкономил денежные средства на приобретение аналогичной программы</li>
+                    <li>
+                        <img style="display: block;" src="https://www.codewars.com/users/Researcher86/badges/large?theme=light" alt="Codewars"/>
+                    </li>
                 </ul>
 
             </div> <!-- item end -->
