--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
             <ul class="disc">
                 <li>Умение проектировать ИС, объектные модели, реляционные базы данных</li>
                 <li>Применение принципов, стилей и паттернов (SOLID, REST, GRASP, GoF)</li>
-                <li>PHP 7+, Symfony Framework, Spiral Framework</li>
+                <li>Применение CQRS + Event Driven</li>
+                <li>PHP 8+, Symfony Framework</li>
                 <li>JavaScript</li>
                 <li>MySQL, Redis, ElasticSearch</li>
                 <li>RabbitMQ</li>
